<resources>
    <string name="app_name">Assignment_3</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone</string>
    <string name="sendbutton">Send</string>


    <string name="firstname_hint">Jack</string>
    <string name="lastname_hint">Smith</string>
    <string name="birthday_hint">dd/MM/yyyy</string>
    <string name="address_hint">Baker Street 51</string>
    <string name="email_hint">jack.smith@gmail.com</string>
    <string name="phonenumber_hint">0400123123</string>
    <string name="random_number">%1$d</string>
    <string name="last_orientation_random_number">Number before orientation change: %d</string>

</resources>